--- a/styles/headerStyle.css
+++ b/styles/headerStyle.css
@@ -33,18 +33,23 @@ nav ul li a:hover {
 }
 
 @media screen and (max-width: 500px) {
+    nav{
+        /* background-color: red; */
+        display:flex;
+        justify-content: space-around;
+        align-items: center;
+    }
     header{
-        background-color: rgb(6, 6, 69);
         width:142vw;
     }
     .left {
         font-size: 2rem;
-        /* justify-content: center; */
+        justify-content: center;
     }
 }
 
-@media screen and (max-width: 1000px) {
+/* @media screen and (max-width: 1000px) {
     nav {
         width: 123vw;
     }
-}
+} */
