--- a/styles/secondSection.css
+++ b/styles/secondSection.css
@@ -39,7 +39,6 @@
         height:75vh;
     } */
     .secondSec{
-        align-items: center;
         max-width: 85vw;
         margin: auto;
         height:70vh;
