--- a/styles/thirdSection.css
+++ b/styles/thirdSection.css
@@ -78,7 +78,7 @@
     }
 }
 
-@media screen and (max-width:1000px){
+/* @media screen and (max-width:1000px){
     .education-timeline {
         background: white;
         width: 100vw;
@@ -97,4 +97,4 @@
     .thirdSec{
         height: 40vh;
     }
-}
+} */
